--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,4 +26,7 @@ jobs:
           restore-keys: |
             mkdocs-material-
       - run: pip install mkdocs-material 
+      - run: pip install mkdocstrings
+      - run: pip3 install mkdocs-git-revision-date-localized-plugin
+      - working-directory: ./workflows
       - run: mkdocs gh-deploy --force
